tests/semantic/assign_err3.expected

Semantic Error [line 8]: 
	Index out of bounds: negative index '-2' unsupported.
